--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ttdadn-backend",
+  "name": "server-payment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,11 +27,13 @@
   },
   "homepage": "https://gitlab.com/huynguyengl99/ttdadn-backend#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
